src/objects/Historial_evento_backShop__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historial eventos backShop</relationshipLabel>
        <relationshipName>Historial_eventos_backShop</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Es_de_utilidad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es de utilidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evento_BackShop__c</fullName>
        <label>Evento BackShop</label>
        <referenceTo>Evento_BackShop__c</referenceTo>
        <relationshipLabel>Historial eventos backShop</relationshipLabel>
        <relationshipName>Historial_eventos_backShop</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identificar_Negocio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identificar Negocio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoSeUtilizo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoSeUtilizo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Por_que_no_negocio__c</fullName>
        <label>Por que no negocio</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Por_que_no_util__c</fullName>
        <label>Por que no util</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Historial evento backShop</label>
    <nameField>
        <label>Nombre de Historial eventos backShop</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historial eventos backShop</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>